monitoring/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: fileops-internal
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:665303624691:certificate/78a6d0e9-9f33-4db1-b5d2-b39690226bff
  name: grafana-alb
spec:
  ingressClassName: alb
  rules:
    - host: grafana.filesops.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: grafana-service
                port:
                  number: 9090
            pathType: Prefix
